--- a/docker-compose-broker.yml
+++ b/docker-compose-broker.yml
@@ -19,8 +19,8 @@ services:
     ports:
       - 8000:80
     environment:
-      PACT_BROKER_BASIC_AUTH_USERNAME: pact_workshop
-      PACT_BROKER_BASIC_AUTH_PASSWORD: pact_workshop
+      # PACT_BROKER_BASIC_AUTH_USERNAME: pact_workshop
+      # PACT_BROKER_BASIC_AUTH_PASSWORD: pact_workshop
       PACT_BROKER_DATABASE_USERNAME: postgres
       PACT_BROKER_DATABASE_PASSWORD: password
       PACT_BROKER_DATABASE_HOST: postgres
